Fixed styling issues on small screen

--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -10,7 +10,7 @@
 }
 
 .contactMain{
-    min-width: 450px;
+    min-width: 350px;
     width:fit-content;
     margin-left:auto;
     margin-right:auto;
