--- a/src/pages/HomeGym/HomeGym.css
+++ b/src/pages/HomeGym/HomeGym.css
@@ -16,27 +16,33 @@
 }
 
 .pricingCardBodyImage{
-    max-height:80%;
     height:fit-content;
-    width:35%;
+    width:45%;
+    position:absolute !important;
+    -webkit-mask-image: linear-gradient(to left, rgba(0,0,0,1), rgba(0,0,0,0)), linear-gradient(to left, rgba(0,0,0,1), rgba(0,0,0,0));
+    -webkit-mask-size: 100% 100%;
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: left top, left bottom;
+    bottom:10% !important;
 }
 
 .pricingCardBodyInfo{
-    display:flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width:95%;
+    width:100%;
     height:100%;
     border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 60px 40px -7px;
+    position:relative;
 }
 
 .pricingCardBodyInfoText{
     color:black;
     font-weight:500;
-    width:40%;
+    width:100% !important;
     text-align: left;
     line-height: 40%;
+    position:absolute;
+    top:25%;
+    left:5%;
 }
 
 .pricingCardBodyInfoTextTitle{
